partial commit